# mtstruct

./: README.md
cpp/: CMakeLists.txt  trie.cpp  wordtrie.cpp  wordtrie.h
docs/: conf.py  index.rst  install.rst
python/: setup.py
python/mt/struct/: __init__.py  trie.pyxbld  version.py
